output8
WARNING: An illegal reflective access operation has occurred
WARNING: Illegal reflective access by com.google.errorprone.util.ErrorProneTokens$CommentSavingTokenizer (file:/home/randall/.gradle/caches/modules-2/files-2.1/com.google.errorprone/error_prone_check_api/2.10.0/6203cac373051702c0cf8ca0bd36332fdc64903f/error_prone_check_api-2.10.0.jar) to field com.sun.tools.javac.parser.JavaTokenizer.reader
WARNING: Please consider reporting this to the maintainers of com.google.errorprone.util.ErrorProneTokens$CommentSavingTokenizer
WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
WARNING: All illegal access operations will be denied in a future release
/mnt/c/Users/randa/Documents/LangCode/JavaCode/ResearchProject3/retrofit-resourceleakchecker/retrofit/src/main/java/retrofit2/Retrofit.java:165: error: [return] incompatible types in return.
                    ? platform.invokeDefaultMethod(method, service, proxy, args)
                    ^
  type of expression: @MustCallUnknown Object
  method return type: @MustCall Object
/mnt/c/Users/randa/Documents/LangCode/JavaCode/ResearchProject3/retrofit-resourceleakchecker/retrofit/src/main/java/retrofit2/Utils.java:327: error: [required.method.not.called] @MustCall method close may not have been invoked on temp-var-247 or any of its aliases.
    body.source().readAll(buffer);
               ^
  The type of object is: okio.BufferedSource.
  Reason for going out of scope: possible exceptional exit due to body.source().readAll(buffer) with exception type java.io.IOException
/mnt/c/Users/randa/Documents/LangCode/JavaCode/ResearchProject3/retrofit-resourceleakchecker/retrofit/src/main/java/retrofit2/Response.java:39: error: [required.method.not.called] @MustCall method close may not have been invoked on temp-var-312 or any of its aliases.
            .build());
                  ^
  The type of object is: okhttp3.Response.
  Reason for going out of scope: regular method exit
/mnt/c/Users/randa/Documents/LangCode/JavaCode/ResearchProject3/retrofit-resourceleakchecker/retrofit/src/main/java/retrofit2/Response.java:57: error: [required.method.not.called] @MustCall method close may not have been invoked on temp-var-324 or any of its aliases.
            .build());
                  ^
  The type of object is: okhttp3.Response.
  Reason for going out of scope: regular method exit
/mnt/c/Users/randa/Documents/LangCode/JavaCode/ResearchProject3/retrofit-resourceleakchecker/retrofit/src/main/java/retrofit2/Response.java:74: error: [required.method.not.called] @MustCall method close may not have been invoked on temp-var-336 or any of its aliases.
            .build());
                  ^
  The type of object is: okhttp3.Response.
  Reason for going out of scope: regular method exit
/mnt/c/Users/randa/Documents/LangCode/JavaCode/ResearchProject3/retrofit-resourceleakchecker/retrofit/src/main/java/retrofit2/Response.java:99: error: [required.method.not.called] @MustCall method close may not have been invoked on temp-var-346 or any of its aliases.
            .body(new OkHttpCall.NoContentResponseBody(body.contentType(), body.contentLength()))
                  ^
  The type of object is: retrofit2.OkHttpCall.NoContentResponseBody.
  Reason for going out of scope: regular method exit
/mnt/c/Users/randa/Documents/LangCode/JavaCode/ResearchProject3/retrofit-resourceleakchecker/retrofit/src/main/java/retrofit2/Response.java:104: error: [required.method.not.called] @MustCall method close may not have been invoked on temp-var-355 or any of its aliases.
            .build());
                  ^
  The type of object is: okhttp3.Response.
  Reason for going out of scope: regular method exit
/mnt/c/Users/randa/Documents/LangCode/JavaCode/ResearchProject3/retrofit-resourceleakchecker/retrofit/src/main/java/retrofit2/OkHttpCall.java:207: error: [required.method.not.called] @MustCall method close may not have been invoked on temp-var-909 or any of its aliases.
    return parseResponse(call.execute());
                                     ^
  The type of object is: okhttp3.Response.
  Reason for going out of scope: possible exceptional exit due to parseResponse(call.execute()) with exception type java.io.IOException
/mnt/c/Users/randa/Documents/LangCode/JavaCode/ResearchProject3/retrofit-resourceleakchecker/retrofit/src/main/java/retrofit2/OkHttpCall.java:218: error: [contracts.postcondition] postcondition of parseResponse is not satisfied.
  Response<T> parseResponse(okhttp3.Response rawResponse) throws IOException {
              ^
  found   : rawResponse is @CalledMethods("code")
  required: rawResponse is @CalledMethods("close")
/mnt/c/Users/randa/Documents/LangCode/JavaCode/ResearchProject3/retrofit-resourceleakchecker/retrofit/src/main/java/retrofit2/OkHttpCall.java:218: error: [flowexpr.parameter.not.final] parameter rawResponse in 'rawResponse' is not effectively final (i.e., it gets re-assigned)
  Response<T> parseResponse(okhttp3.Response rawResponse) throws IOException {
              ^
/mnt/c/Users/randa/Documents/LangCode/JavaCode/ResearchProject3/retrofit-resourceleakchecker/retrofit/src/main/java/retrofit2/OkHttpCall.java:219: error: [required.method.not.called] @MustCall method close may not have been invoked on rawBody or any of its aliases.
    ResponseBody rawBody = rawResponse.body();
                 ^
  The type of object is: okhttp3.ResponseBody.
  Reason for going out of scope: possible exceptional exit due to responseConverter.convert(catchingBody) with exception type java.io.IOException
/mnt/c/Users/randa/Documents/LangCode/JavaCode/ResearchProject3/retrofit-resourceleakchecker/retrofit/src/main/java/retrofit2/OkHttpCall.java:222: error: [required.method.not.called] @MustCall method close may not have been invoked on rawResponse or any of its aliases.
    rawResponse =
                ^
  The type of object is: okhttp3.Response.
  Reason for going out of scope: regular method exit
/mnt/c/Users/randa/Documents/LangCode/JavaCode/ResearchProject3/retrofit-resourceleakchecker/retrofit/src/main/java/retrofit2/OkHttpCall.java:225: error: [required.method.not.called] @MustCall method close may not have been invoked on temp-var-917 or any of its aliases.
            .body(new NoContentResponseBody(rawBody.contentType(), rawBody.contentLength()))
                  ^
  The type of object is: retrofit2.OkHttpCall.NoContentResponseBody.
  Reason for going out of scope: regular method exit
/mnt/c/Users/randa/Documents/LangCode/JavaCode/ResearchProject3/retrofit-resourceleakchecker/retrofit/src/main/java/retrofit2/OkHttpCall.java:226: error: [assignment] incompatible types in assignment.
            .build();
                  ^
  found   : @MustCall("close") Response
  required: @MustCall Response
/mnt/c/Users/randa/Documents/LangCode/JavaCode/ResearchProject3/retrofit-resourceleakchecker/retrofit/src/main/java/retrofit2/OkHttpCall.java:232: error: [required.method.not.called] @MustCall method close may not have been invoked on bufferedBody or any of its aliases.
        ResponseBody bufferedBody = Utils.buffer(rawBody);
                     ^
  The type of object is: okhttp3.ResponseBody.
  Reason for going out of scope: regular method exit
/mnt/c/Users/randa/Documents/LangCode/JavaCode/ResearchProject3/retrofit-resourceleakchecker/retrofit/src/main/java/retrofit2/OkHttpCall.java:244: error: [required.method.not.called] @MustCall method close may not have been invoked on catchingBody or any of its aliases.
    ExceptionCatchingResponseBody catchingBody = new ExceptionCatchingResponseBody(rawBody);  //Will this close the resource?
                                  ^
  The type of object is: retrofit2.OkHttpCall.ExceptionCatchingResponseBody.
  Reason for going out of scope: possible exceptional exit due to responseConverter.convert(catchingBody) with exception type java.io.IOException
/mnt/c/Users/randa/Documents/LangCode/JavaCode/ResearchProject3/retrofit-resourceleakchecker/retrofit/src/main/java/retrofit2/OkHttpCall.java:312: error: [required.method.not.called] @MustCall method close may not have been invoked on temp-var-935 or any of its aliases.
          Okio.buffer(
                     ^
  The type of object is: okio.BufferedSource.
  Reason for going out of scope: regular method exit
/mnt/c/Users/randa/Documents/LangCode/JavaCode/ResearchProject3/retrofit-resourceleakchecker/retrofit/src/main/java/retrofit2/OkHttpCall.java:313: error: [required.method.not.called] @MustCall method close may not have been invoked on temp-var-934 or any of its aliases.
              new ForwardingSource(delegate.source()) {
              ^
  The type of object is: <anonymous okio.ForwardingSource>.
  Reason for going out of scope: regular method exit
/mnt/c/Users/randa/Documents/LangCode/JavaCode/ResearchProject3/retrofit-resourceleakchecker/retrofit/src/main/java/retrofit2/OkHttpCall.java:313: error: [required.method.not.called] @MustCall method close may not have been invoked on temp-var-933 or any of its aliases.
              new ForwardingSource(delegate.source()) {
                                                  ^
  The type of object is: okio.BufferedSource.
  Reason for going out of scope: regular method exit
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
19 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':retrofit:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 45s
